--- a/package.json
+++ b/package.json
@@ -16,28 +16,33 @@
     "db:health": "node -e \"import('./src/db/health-check.js').then(m => { const hc = m.healthCheck; hc.check().then(s => console.log(hc.formatStatus(s))); })\"",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "keywords": ["airbnb", "alerts", "scraper"],
+  "keywords": [
+    "airbnb",
+    "alerts",
+    "scraper"
+  ],
   "author": "",
   "license": "MIT",
   "dependencies": {
-    "express": "^4.18.2",
-    "pg": "^8.11.3",
-    "dotenv": "^16.4.5",
-    "bcrypt": "^5.1.1",
-    "jsonwebtoken": "^9.0.2",
-    "bull": "^4.12.0",
-    "ioredis": "^5.3.2",
-    "node-cron": "^3.0.3",
     "axios": "^1.6.7",
-    "ical.js": "^1.5.0",
-    "nodemailer": "^6.9.9",
+    "bcrypt": "^5.1.1",
+    "bull": "^4.12.0",
     "cors": "^2.8.5",
-    "helmet": "^7.1.0",
+    "dotenv": "^16.4.5",
+    "express": "^4.18.2",
     "express-rate-limit": "^7.1.5",
-    "winston": "^3.11.0",
+    "express-validator": "^7.3.1",
+    "helmet": "^7.1.0",
+    "ical.js": "^1.5.0",
+    "ioredis": "^5.3.2",
+    "jsonwebtoken": "^9.0.2",
+    "node-cron": "^3.0.3",
+    "nodemailer": "^6.9.9",
     "passport": "^0.7.0",
     "passport-google-oauth20": "^2.0.0",
-    "stripe": "^14.0.0"
+    "pg": "^8.11.3",
+    "stripe": "^14.0.0",
+    "winston": "^3.11.0"
   },
   "devDependencies": {
     "nodemon": "^3.0.3"
